--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>미국 주식 추천</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <header>
+        <h1>미국 주식 종목 추천</h1>
+        <p>AI가 선정한 TOP 5 추천 종목을 확인해보세요.</p>
+    </header>
+    <main id="stock-list">
+        <!-- 주식 추천 정보가 여기에 동적으로 추가됩니다. -->
+    </main>
+    <footer>
+        <p>본 정보는 투자 참고용이며, 투자 판단의 최종 책임은 투자자 본인에게 있습니다.</p>
+    </footer>
+    <script src="main.js"></script>
 </body>
 </html>
