feat: Add dark/light mode toggle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
     <header>
         <h1>미국 주식 종목 추천</h1>
         <p>AI가 선정한 TOP 5 추천 종목을 확인해보세요.</p>
+        <button id="theme-toggle">모드 전환</button>
     </header>
     <main id="stock-list">
         <!-- 주식 추천 정보가 여기에 동적으로 추가됩니다. -->
