--- a/index.html
+++ b/index.html
@@ -15,6 +15,23 @@
     <main id="stock-list">
         <!-- 주식 추천 정보가 여기에 동적으로 추가됩니다. -->
     </main>
+
+    <section id="contact-form">
+        <h2>제휴 문의</h2>
+        <form action="https://formspree.io/f/xwvbldpe" method="POST">
+            <label for="name">이름:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">이메일:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">문의 내용:</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit">제출하기</button>
+        </form>
+    </section>
+
     <footer>
         <p>본 정보는 투자 참고용이며, 투자 판단의 최종 책임은 투자자 본인에게 있습니다.</p>
     </footer>
