Feat: UI improvements - Update header text and implement CSS loading spinner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>미국 주식 종목 추천</h1>
-        <p>AI가 선정한 TOP 5 추천 종목을 확인해보세요.</p>
+        <p>AI 분석 주식 정보 (현재 AAPL 단일 종목)</p>
         <button id="theme-toggle">모드 전환</button>
     </header>
     <main id="stock-list">
