feat: Overhaul UI with new design

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <p>히스토그램</p>
                     <p>1.85</p>
                 </div>
-                <div class="indicator">
+                <div class="indicator recommendation">
                     <p>추천</p>
-                    <p>유지</p>
+                    <p class="rec-value">유지</p>
                 </div>
             </div>
 
@@ -78,19 +78,21 @@
         <section class="related-news">
             <h3>관련 뉴스</h3>
             <div class="no-news">
+                 <div class="search-icon"></div>
                 <p>관련 뉴스를 찾을 수 없습니다.</p>
             </div>
         </section>
 
         <section class="feedback">
             <h3>What do you think?</h3>
+            <p class="feedback-count">만족 1건</p>
             <div class="reactions">
-                <button><span>👍</span> Upvote</button>
-                <button><span>😂</span> Funny</button>
-                <button><span>😍</span> Love</button>
-                <button><span>😮</span> Surprised</button>
-                <button><span>😡</span> Angry</button>
-                <button class="active"><span>😢</span> Sad</button>
+                <button><span>👍</span><span class="count">0</span> Upvote</button>
+                <button><span>😂</span><span class="count">0</span> Funny</button>
+                <button><span>😍</span><span class="count">0</span> Love</button>
+                <button><span>😮</span><span class="count">0</span> Surprised</button>
+                <button><span>😡</span><span class="count">0</span> Angry</button>
+                <button class="active"><span>😢</span><span class="count">1</span> Sad</button>
             </div>
         </section>
     </main>
