--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <section class="stock-details">
             <div class="stock-header">
                 <div>
-                    <h2>AAPL (AAPL)</h2>
-                    <span class="status">유지 (상승 추세)</span>
+                    <h2 id="stock-name">AAPL (AAPL)</h2>
+                    <span id="status" class="status">유지 (상승 추세)</span>
                 </div>
-                <div class="price">
+                <div id="price" class="price">
                     $270.01
                     <span>최신 가격</span>
                 </div>
@@ -40,42 +40,42 @@
             <div class="indicators">
                 <div class="indicator">
                     <p>SMA(20)</p>
-                    <p>257.60</p>
+                    <p id="sma-value">257.60</p>
                 </div>
                 <div class="indicator">
                     <p>RSI(14)</p>
-                    <p>62.48</p>
+                    <p id="rsi-value">62.48</p>
                 </div>
                 <div class="indicator">
                     <p>MACD 값</p>
-                    <p>-2.19</p>
+                    <p id="macd-value">-2.19</p>
                 </div>
                 <div class="indicator">
                     <p>시그널 값</p>
-                    <p>-4.03</p>
+                    <p id="signal-value">-4.03</p>
                 </div>
                 <div class="indicator">
                     <p>히스토그램</p>
-                    <p>1.85</p>
+                    <p id="histogram-value">1.85</p>
                 </div>
                 <div class="indicator recommendation">
                     <p>추천</p>
-                    <p class="rec-value">유지</p>
+                    <p id="rec-value" class="rec-value">유지</p>
                 </div>
             </div>
 
             <div class="ai-analysis">
                 <h3>AI 분석 사유</h3>
-                <p>현재 가격이 SMA(20) 위에 있습니다.</p>
+                <p id="ai-reason">현재 가격이 SMA(20) 위에 있습니다.</p>
             </div>
 
             <div class="actions">
-                <button class="chart-btn">간단한 차트</button>
+                <button id="chart-btn" class="chart-btn">간단한 차트</button>
                 <button class="news-btn">관련 뉴스</button>
             </div>
         </section>
 
-        <section class="related-news">
+        <section id="news-section" class="related-news">
             <h3>관련 뉴스</h3>
             <div class="no-news">
                  <div class="search-icon"></div>
@@ -97,5 +97,14 @@
         </section>
     </main>
 
+    <div id="chart-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <canvas id="stock-chart"></canvas>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
