--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StockPro</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -12,99 +14,112 @@
             <span class="logo-s">S</span> StockPro
         </div>
         <nav>
-            <a href="#">홈</a>
-            <a href="#">종목 분석</a>
+            <a href="#" class="active">홈</a>
+            <a href="#">종목</a>
             <a href="#">뉴스</a>
         </nav>
     </header>
 
-    <main>
-        <section class="stock-recommendation">
-            <h2>미국 주식 종목 추천</h2>
-            <p>AI 분석 주식 정보 (현재 AAPL 단일 종목)</p>
-            <button class="view-today">오늘 전망</button>
-        </section>
+    <div class="container">
+        <main>
+            <section class="ai-today-recommendation">
+                <h2>오늘의 AI 추천</h2>
+                <p>실시간 데이터 분석으로 최적의 타이밍을 알려드려요</p>
+            </section>
 
-        <section class="stock-details">
-            <div class="stock-header">
-                <div>
-                    <h2 id="stock-name">AAPL (AAPL)</h2>
-                    <span id="status" class="status">유지 (상승 추세)</span>
+            <section class="stock-info">
+                <div class="stock-info-header">
+                    <div>
+                        <h1 id="stock-name">Apple Inc.</h1>
+                        <p id="stock-ticker" class="ticker">AAPL</p>
+                    </div>
+                    <a href="#" class="details-link">상세 ></a>
                 </div>
-                <div id="price" class="price">
-                    $270.01
-                    <span>최신 가격</span>
+                <div class="price-section">
+                    <span id="price-value" class="price-value">$270.01</span>
+                    <span id="price-change-indicator" class="price-change-indicator"></span>
                 </div>
-            </div>
+                <p id="price-date" class="price-date">2024.01.15 기준</p>
 
-            <div class="indicators">
-                <div class="indicator">
-                    <p>SMA(20)</p>
-                    <p id="sma-value">257.60</p>
+                <div class="market-data">
+                    <div>
+                        <p class="data-label">전일 대비</p>
+                        <p id="price-change-value" class="data-value positive">+13.05</p>
+                    </div>
+                    <div>
+                        <p class="data-label">거래량</p>
+                        <p id="volume-value" class="data-value">257.60M</p>
+                    </div>
+                    <div>
+                        <p class="data-label">시가총액</p>
+                        <p id="market-cap-value" class="data-value">$4.2T</p>
+                    </div>
                 </div>
-                <div class="indicator">
-                    <p>RSI(14)</p>
-                    <p id="rsi-value">62.48</p>
-                </div>
-                <div class="indicator">
-                    <p>MACD 값</p>
-                    <p id="macd-value">-2.19</p>
-                </div>
-                <div class="indicator">
-                    <p>시그널 값</p>
-                    <p id="signal-value">-4.03</p>
-                </div>
-                <div class="indicator">
-                    <p>히스토그램</p>
-                    <p id="histogram-value">1.85</p>
-                </div>
-                <div class="indicator recommendation">
-                    <p>추천</p>
-                    <p id="rec-value" class="rec-value">유지</p>
-                </div>
-            </div>
+            </section>
 
-            <div class="ai-analysis">
-                <h3>AI 분석 사유</h3>
-                <p id="ai-reason">현재 가격이 SMA(20) 위에 있습니다.</p>
-            </div>
+            <section class="ai-analysis-section">
+                 <div class="ai-analysis-header">
+                    <h2><span class="icon">🤖</span> AI 분석</h2>
+                    <span id="rec-value-tag" class="status-tag">유지</span>
+                </div>
+                <div class="reason-box">
+                    <p class="reason-title">📈 추천 이유</p>
+                    <p id="ai-reason" class="reason-text">현재 가격이 SMA(20) 위에 있습니다.</p>
+                </div>
+                <div class="mini-indicators">
+                    <div class="mini-indicator">
+                        <p class="indicator-label">RSI(14)</p>
+                        <p id="rsi-value" class="indicator-value">62.48</p>
+                        <p id="rsi-status" class="indicator-status green">중립</p>
+                    </div>
+                    <div class="mini-indicator">
+                        <p class="indicator-label">MACD</p>
+                        <p id="macd-value" class="indicator-value">-2.19</p>
+                        <p id="macd-status" class="indicator-status red">약세</p>
+                    </div>
+                    <div class="mini-indicator">
+                        <p class="indicator-label">시그널</p>
+                        <p id="signal-value" class="indicator-value">-4.03</p>
+                        <p id="signal-status" class="indicator-status gray">확인</p>
+                    </div>
+                </div>
+            </section>
 
-            <div class="actions">
-                <button id="chart-btn" class="chart-btn">간단한 차트</button>
-                <button class="news-btn">관련 뉴스</button>
-            </div>
-        </section>
-
-        <section id="news-section" class="related-news">
-            <h3>관련 뉴스</h3>
-            <div class="no-news">
-                 <div class="search-icon"></div>
-                <p>관련 뉴스를 찾을 수 없습니다.</p>
-            </div>
-        </section>
-
-        <section class="feedback">
-            <h3>What do you think?</h3>
-            <p class="feedback-count">만족 1건</p>
-            <div class="reactions">
-                <button><span>👍</span><span class="count">0</span> Upvote</button>
-                <button><span>😂</span><span class="count">0</span> Funny</button>
-                <button><span>😍</span><span class="count">0</span> Love</button>
-                <button><span>😮</span><span class="count">0</span> Surprised</button>
-                <button><span>😡</span><span class="count">0</span> Angry</button>
-                <button class="active"><span>😢</span><span class="count">1</span> Sad</button>
-            </div>
-        </section>
-    </main>
+        </main>
+        <aside class="sidebar">
+            <section class="quick-actions">
+                <h3>빠른 액션</h3>
+                <button id="chart-action-btn" class="action-btn active"><span>📊</span> 차트 보기</button>
+                <button id="news-action-btn" class="action-btn"><span>📰</span> 뉴스 보기</button>
+                <button class="action-btn"><span>🔔</span> 알림 설정</button>
+            </section>
+            <section class="ai-tip">
+                 <h3><span>💡</span> AI TIP</h3>
+                 <p>SMA(20)은 20일 이동평균선을 의미하며, 주가 추세를 판단하는 데 사용됩니다.</p>
+            </section>
+        </aside>
+    </div>
 
     <div id="chart-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <canvas id="stock-chart"></canvas>
+            <h2>주가 차트 (<span id="modal-ticker">AAPL</span>)</h2>
+            <div style="height:400px; width:100%;">
+                <canvas id="stock-chart"></canvas>
+            </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <div id="news-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>최신 뉴스 (<span id="modal-news-ticker">AAPL</span>)</h2>
+            <div id="news-content">
+                <p>뉴스를 불러오는 중...</p>
+            </div>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
