--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
         </div>
         <nav>
             <a href="#" class="active">홈</a>
-            <a href="#">종목</a>
-            <a href="#">뉴스</a>
         </nav>
     </header>
 
@@ -26,7 +24,7 @@
         <main>
             <section class="ai-today-recommendation">
                 <h2>오늘의 AI 추천</h2>
-                <p>실시간 데이터 분석으로 최적의 타이밍을 알려드려요</p>
+                <p>StockPro의 AI가 분석한 시장 동향과 기술적 지표를 기반으로 한 맞춤형 주식 추천을 확인하세요. 실시간 데이터 분석으로 최적의 타이밍을 알려드립니다.</p>
             </section>
 
             <section class="stock-list" id="stock-list">
@@ -35,12 +33,7 @@
 
             </main>
             <aside class="sidebar">
-                <section class="quick-actions">
-                    <h3>빠른 액션</h3>
-                    <button id="chart-action-btn" class="action-btn active"><span>📊</span> 차트 보기</button>
-                    <button id="news-action-btn" class="action-btn"><span>📰</span> 뉴스 보기</button>
-                    <button class="action-btn"><span>🔔</span> 알림 설정</button>
-                </section>
+                <!-- Quick actions removed as their functionality is now integrated into stock cards -->
             </aside>
             </div>
 
